Fix overflow issues with sliding FAQ

--- a/src/styles/readmycards/rmc-footer.less
+++ b/src/styles/readmycards/rmc-footer.less
@@ -79,23 +79,12 @@
   }
 }
 
-
-.st-faq-open .st-pusher::after {
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  -webkit-transition: opacity 0.5s;
-  transition: opacity 0.5s;
-}
-
 .st-faq {
   position: absolute;
   bottom: 60px;
   left: 0;
   z-index: 100;
-  visibility: hidden;
   width: 100%;
-  height: auto;
   background: @brand-primary;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
@@ -135,43 +124,20 @@
   }
 }
 
-.st-faq::after {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.2);
-  content: '';
-  opacity: 1;
-  -webkit-transition: opacity 0.5s;
-  transition: opacity 0.5s;
-}
-
-.st-faq-open .st-faq::after {
-  width: 0;
-  height: 0;
-  opacity: 0;
-  -webkit-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
-  transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
-}
-
 
 /* Slide in on top */
 .sliding-faq {
   &.st-faq {
-    visibility: visible;
+    visibility: hidden;
+    opacity: 0;
     -webkit-transform: translate3d(0, 100%, 0);
     transform: translate3d(0, 100%, 0);
 
     &.st-faq-open {
       visibility: visible;
+      opacity: 1;
       -webkit-transform: translate3d(0, 0, 0);
       transform: translate3d(0, 0, 0);
-    }
-
-    &::after {
-      display: none;
     }
   }
 }
