--- a/src/styles/readmycards/rmc.less
+++ b/src/styles/readmycards/rmc.less
@@ -23,6 +23,7 @@ html {
   min-height: 100%;
   position: relative;
   background: #eee;
+  overflow: hidden;
 }
 
 #rmc-header {
@@ -34,6 +35,7 @@ html {
   color: #333;
   max-width: 1200px;
   margin: 0 auto;
+  overflow: auto;
 
   a {
     color: @t1t-green;
